--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/native": "^7.0.3",
     "@realm/react": "^0.20.0",
     "expo": "^54.0.30",
+    "expo-application": "~7.0.8",
     "expo-constants": "~18.0.12",
     "expo-dev-client": "^6.0.20",
     "expo-linking": "~8.0.11",
