--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "expo-application": "~7.0.8",
     "expo-constants": "~18.0.12",
     "expo-dev-client": "^6.0.20",
+    "expo-font": "^14.0.10",
     "expo-linking": "~8.0.11",
     "expo-router": "~6.0.21",
+    "expo-splash-screen": "^31.0.13",
     "expo-status-bar": "~3.0.9",
     "expo-system-ui": "~6.0.9",
     "expo-web-browser": "~15.0.10",
